[package]
name = "artano"
version = "0.3.3"
edition = "2018"
authors = ["J/A <archer884@gmail.com>"]
license = "MIT/Apache-2.0"
keywords = ["image", "image-manipulation", "meme", "pepe", "kek"]
readme = "README.md"
repository = "https://github.com/archer884/artano"
homepage = "https://github.com/archer884/artano"
documentation = "https://docs.rs/artano"
categories = ["multimedia::images"]
description = """
Adds text to pictures.
"""

[dependencies]
conv = "0.3"
font-kit = "0.6"
image = "0.23"
imageproc = "0.20"
rusttype = "0.9"
