[package]
name = "artano"
version = "0.3.10"
edition = "2021"
authors = ["J/A <archer884@gmail.com>"]
license = "MIT/Apache-2.0"
keywords = ["image", "image-manipulation", "meme", "pepe", "kek"]
readme = "README.md"
repository = "https://github.com/archer884/artano"
homepage = "https://github.com/archer884/artano"
documentation = "https://docs.rs/artano"
categories = ["multimedia::images"]
description = """
Adds text to pictures.
"""

[dependencies]
conv = "0.3.3"
font-kit = "0.13.0"
image = "0.25.1"
imageproc = "0.24.0"
rusttype = "0.9.3"
